; ModuleID = '/home/carl/AnghaBench/linux/drivers/usb/gadget/function/extr_uvc_configfs.c_uvcg_control_header_make.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/usb/gadget/function/extr_uvc_configfs.c_uvcg_control_header_make.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.config_item = type { i32 }
%struct.config_group = type { i32 }
%struct.uvcg_control_header = type { %struct.config_item, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32, i32, i32, i32, i32 }

@GFP_KERNEL = common dso_local global i32 0, align 4
@ENOMEM = common dso_local global i32 0, align 4
@USB_DT_CS_INTERFACE = common dso_local global i32 0, align 4
@UVC_VC_HEADER = common dso_local global i32 0, align 4
@uvcg_control_header_type = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.config_item* (%struct.config_group*, i8*)* @uvcg_control_header_make to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.config_item* @uvcg_control_header_make(%struct.config_group* %0, i8* %1) #0 {
  %3 = alloca %struct.config_item*, align 8
  %4 = alloca %struct.config_group*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca %struct.uvcg_control_header*, align 8
  store %struct.config_group* %0, %struct.config_group** %4, align 8
  store i8* %1, i8** %5, align 8
  %7 = load i32, i32* @GFP_KERNEL, align 4
  %8 = call %struct.uvcg_control_header* @kzalloc(i32 24, i32 %7)
  store %struct.uvcg_control_header* %8, %struct.uvcg_control_header** %6, align 8
  %9 = load %struct.uvcg_control_header*, %struct.uvcg_control_header** %6, align 8
  %10 = icmp ne %struct.uvcg_control_header* %9, null
  br i1 %10, label %15, label %11

11:                                               ; preds = %2
  %12 = load i32, i32* @ENOMEM, align 4
  %13 = sub nsw i32 0, %12
  %14 = call %struct.config_item* @ERR_PTR(i32 %13)
  store %struct.config_item* %14, %struct.config_item** %3, align 8
  br label %42

15:                                               ; preds = %2
  %16 = call i32 @UVC_DT_HEADER_SIZE(i32 1)
  %17 = load %struct.uvcg_control_header*, %struct.uvcg_control_header** %6, align 8
  %18 = getelementptr inbounds %struct.uvcg_control_header, %struct.uvcg_control_header* %17, i32 0, i32 1
  %19 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %18, i32 0, i32 4
  store i32 %16, i32* %19, align 4
  %20 = load i32, i32* @USB_DT_CS_INTERFACE, align 4
  %21 = load %struct.uvcg_control_header*, %struct.uvcg_control_header** %6, align 8
  %22 = getelementptr inbounds %struct.uvcg_control_header, %struct.uvcg_control_header* %21, i32 0, i32 1
  %23 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %22, i32 0, i32 3
  store i32 %20, i32* %23, align 4
  %24 = load i32, i32* @UVC_VC_HEADER, align 4
  %25 = load %struct.uvcg_control_header*, %struct.uvcg_control_header** %6, align 8
  %26 = getelementptr inbounds %struct.uvcg_control_header, %struct.uvcg_control_header* %25, i32 0, i32 1
  %27 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %26, i32 0, i32 2
  store i32 %24, i32* %27, align 4
  %28 = call i32 @cpu_to_le16(i32 256)
  %29 = load %struct.uvcg_control_header*, %struct.uvcg_control_header** %6, align 8
  %30 = getelementptr inbounds %struct.uvcg_control_header, %struct.uvcg_control_header* %29, i32 0, i32 1
  %31 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %30, i32 0, i32 1
  store i32 %28, i32* %31, align 4
  %32 = call i32 @cpu_to_le32(i32 48000000)
  %33 = load %struct.uvcg_control_header*, %struct.uvcg_control_header** %6, align 8
  %34 = getelementptr inbounds %struct.uvcg_control_header, %struct.uvcg_control_header* %33, i32 0, i32 1
  %35 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %34, i32 0, i32 0
  store i32 %32, i32* %35, align 4
  %36 = load %struct.uvcg_control_header*, %struct.uvcg_control_header** %6, align 8
  %37 = getelementptr inbounds %struct.uvcg_control_header, %struct.uvcg_control_header* %36, i32 0, i32 0
  %38 = load i8*, i8** %5, align 8
  %39 = call i32 @config_item_init_type_name(%struct.config_item* %37, i8* %38, i32* @uvcg_control_header_type)
  %40 = load %struct.uvcg_control_header*, %struct.uvcg_control_header** %6, align 8
  %41 = getelementptr inbounds %struct.uvcg_control_header, %struct.uvcg_control_header* %40, i32 0, i32 0
  store %struct.config_item* %41, %struct.config_item** %3, align 8
  br label %42

42:                                               ; preds = %15, %11
  %43 = load %struct.config_item*, %struct.config_item** %3, align 8
  ret %struct.config_item* %43
}

declare dso_local %struct.uvcg_control_header* @kzalloc(i32, i32) #1

declare dso_local %struct.config_item* @ERR_PTR(i32) #1

declare dso_local i32 @UVC_DT_HEADER_SIZE(i32) #1

declare dso_local i32 @cpu_to_le16(i32) #1

declare dso_local i32 @cpu_to_le32(i32) #1

declare dso_local i32 @config_item_init_type_name(%struct.config_item*, i8*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
